--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -153,3 +153,28 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/280508477/
         dtstart: 2021-10-13 09:00:00+02:00
         dtend: 2021-10-13 10:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 20, 2021, 9:00 AM: REGISTRACE ZDE: https://www.datascript.cz/morning-talks/prometheus-pro-logging-metering-a-profiling/Na co se můžete těšit:Neustále rostoucí nároky na rychlost a objem nasaz'
+      og_title: Prometheus pro logging, metering a profiling
+      image: https://secure.meetupstatic.com/photos/event/5/2/0/6/600_498560998.jpeg
+      url: https://www.meetup.com/Morning-Talks/events/280508488/
+      ical:
+        summary: Prometheus pro logging, metering a profiling
+        description: 'Morning Talks
+
+          Wednesday, October 20 at 9:00 AM
+
+
+          REGISTRACE ZDE: https://www.datascript.cz/morning-talks/prometheus-pro-logging-metering-a-profiling/ Na co se můžete těšit:Neustále rostoucí nároky na...
+
+
+          https://www.meetup.com/Morning-Talks/events/280508488/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280508488@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/280508488/
+        dtstart: 2021-10-20 09:00:00+02:00
+        dtend: 2021-10-20 10:00:00+02:00
