--- a/data/sources/ibm-developer-prague.yaml
+++ b/data/sources/ibm-developer-prague.yaml
@@ -105,3 +105,28 @@ series:
         url: https://www.meetup.com/IBM-Developer-Prague/events/279925026/
         dtstart: 2021-08-16 16:00:00+02:00
         dtend: 2021-08-16 17:00:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Oct 14, 2021, 5:00 PM: IBM & TCS Present: Communicating between ApplicationsIntro to Enterprise Messaging & Event StreamingEnterprise messaging technologies, such as IBM MQ, have provided asynchr'
+      og_title: 'IBM & TCS Present: Communicating between Applications'
+      image: https://secure.meetupstatic.com/photos/event/3/7/8/8/600_498974216.jpeg
+      url: https://www.meetup.com/IBM-Developer-Prague/events/280921328/
+      ical:
+        summary: 'IBM & TCS Present: Communicating between Applications'
+        description: 'IBM Developer Czechia
+
+          Thursday, October 14 at 5:00 PM
+
+
+          IBM & TCS Present: Communicating between ApplicationsIntro to Enterprise Messaging & Event StreamingEnterprise messaging technologies, such as IBM MQ,...
+
+
+          https://www.meetup.com/IBM-Developer-Prague/events/280921328/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280921328@meetup.com
+        url: https://www.meetup.com/IBM-Developer-Prague/events/280921328/
+        dtstart: 2021-10-14 17:00:00+02:00
+        dtend: 2021-10-14 19:00:00+02:00
