--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -55,3 +55,53 @@ series:
         url: https://www.meetup.com/Microsoft-Events-in-Prague/events/266913890/
         dtstart: 2019-12-03 18:30:00+01:00
         dtend: 2019-12-03 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Sep 26, 2019, 5:20 PM: Save the date and register for our upcoming startup community event.We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look forwa'
+      og_title: Prague Startup Day 2019
+      image: https://secure.meetupstatic.com/photos/event/e/2/9/7/600_484438007.jpeg
+      url: https://www.meetup.com/Microsoft-Events-in-Prague/events/264424128/
+      ical:
+        summary: Prague Startup Day 2019
+        description: 'Microsoft Events in Prague
+
+          Thursday, September 26 at 5:20 PM
+
+
+          Save the date and register for our upcoming startup community event. We are excited to invite you to our second Prague Startup Day organized by Micros...
+
+
+          https://www.meetup.com/Microsoft-Events-in-Prague/events/264424128/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_264424128@meetup.com
+        url: https://www.meetup.com/Microsoft-Events-in-Prague/events/264424128/
+        dtstart: 2019-09-26 17:20:00+02:00
+        dtend: 2019-09-26 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Mon, Jun 17, 2019, 4:30 PM: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.Summer is here and it''s time to slow dow'
+      og_title: Startup BBQ 2019 on rooftop
+      image: https://secure.meetupstatic.com/photos/event/9/2/1/7/600_482077399.jpeg
+      url: https://www.meetup.com/Microsoft-Events-in-Prague/events/261799526/
+      ical:
+        summary: Startup BBQ 2019 on rooftop
+        description: 'Microsoft Events in Prague
+
+          Monday, June 17 at 4:30 PM
+
+
+          The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below. Summer is here an...
+
+
+          https://www.meetup.com/Microsoft-Events-in-Prague/events/261799526/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_261799526@meetup.com
+        url: https://www.meetup.com/Microsoft-Events-in-Prague/events/261799526/
+        dtstart: 2019-06-17 16:30:00+02:00
+        dtend: 2019-06-17 21:00:00+02:00
