--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -131,3 +131,28 @@ series:
         url: https://www.meetup.com/asociace-ux/events/280768687/
         dtstart: 2021-09-15 17:00:00+02:00
         dtend: 2021-09-15 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Oct 5, 2021, 6:00 PM: World Interaction Design Day is an annual event where we come together as a united global community to show how interaction design improves the human condition.This year we’'
+      og_title: 'IxDD Brno 2021: Solidarity & Transformation'
+      image: https://secure.meetupstatic.com/photos/event/8/6/2/b/600_462814347.jpeg
+      url: https://www.meetup.com/asociace-ux/events/280942000/
+      ical:
+        summary: 'IxDD Brno 2021: Solidarity & Transformation'
+        description: 'Asociace UX
+
+          Tuesday, October 5 at 6:00 PM
+
+
+          World Interaction Design Day is an annual event where we come together as a united global community to show how interaction design improves the human ...
+
+
+          https://www.meetup.com/asociace-ux/events/280942000/'
+        location: KUMST (Údolní 495/19, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280942000@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/280942000/
+        dtstart: 2021-10-05 18:00:00+02:00
+        dtend: 2021-10-05 21:00:00+02:00
