--- a/data/sources/pipedrive-prague.yaml
+++ b/data/sources/pipedrive-prague.yaml
@@ -1,9 +1,9 @@
 series:
   meetupcom:
     url: https://www.meetup.com/pipedrive-talks-prague/
-    meta_description: This group is for anyone who wants to continuously learn about the application of modern technologies in real life situations, solutions about common problems and much more. Some of the topics we regu
+    meta_description: This group is for anyone who wants to continuously learn about the application of modern technologies in real-life situations, solutions to common problems and much more. Some of the topics we regular
     og_title: Pipedrive Talks Prague (Prague, Czech Republic)
-    image: https://secure.meetupstatic.com/photos/event/6/a/8/6/600_475167270.jpeg
+    image: https://secure.meetupstatic.com/photos/event/c/1/b/c/600_499009596.jpeg
   events:
   - meetupcom:
       meta_description: 'Wed, Sep 8, 2021, 5:00 PM: Most product professionals will have to work with an existing product or a subsection of it. Launching a new product is an experience very few go through. Luckily, these day'
