--- a/data/sources/spark-ai-prague.yaml
+++ b/data/sources/spark-ai-prague.yaml
@@ -54,3 +54,53 @@ series:
         url: https://www.meetup.com/Spark-AI-Prague-Meetup/events/266632322/
         dtstart: 2019-12-09 17:30:00+01:00
         dtend: 2019-12-09 22:00:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Oct 8, 2019, 6:00 PM: We are back after the summer with another Spark+AI Prague Meetup. Join us for the Spark + AI use case from Mall.cz and a technical talk introducing Spark streaming.The preli'
+      og_title: Spark+AI Prague Meetup back after the summer!
+      image: https://secure.meetupstatic.com/photos/event/b/3/7/a/600_478005946.jpeg
+      url: https://www.meetup.com/Spark-AI-Prague-Meetup/events/265088292/
+      ical:
+        summary: Spark+AI Prague Meetup back after the summer!
+        description: 'Spark+AI Prague Meetup
+
+          Tuesday, October 8 at 6:00 PM
+
+
+          We are back after the summer with another Spark+AI Prague Meetup. Join us for the Spark + AI use case from Mall.cz and a technical talk introducing Sp...
+
+
+          https://www.meetup.com/Spark-AI-Prague-Meetup/events/265088292/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_265088292@meetup.com
+        url: https://www.meetup.com/Spark-AI-Prague-Meetup/events/265088292/
+        dtstart: 2019-10-08 18:00:00+02:00
+        dtend: 2019-10-08 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Mon, Jun 17, 2019, 5:30 PM: Summer is nearly here and it''s time for our next Spark+AI Prague meetup! What can you expect this time? David Vrba from Socialbakers will be having a talk about UDFs in Spa'
+      og_title: 4th Spark+AI Prague Group Meetup
+      image: https://secure.meetupstatic.com/photos/event/3/8/8/f/600_481694479.jpeg
+      url: https://www.meetup.com/Spark-AI-Prague-Meetup/events/261799133/
+      ical:
+        summary: 4th Spark+AI Prague Group Meetup
+        description: 'Spark+AI Prague Meetup
+
+          Monday, June 17 at 5:30 PM
+
+
+          Summer is nearly here and it''s time for our next Spark+AI Prague meetup! What can you expect this time? David Vrba from Socialbakers will be having a ...
+
+
+          https://www.meetup.com/Spark-AI-Prague-Meetup/events/261799133/'
+        location: Emplifi (Pernerova 53, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_261799133@meetup.com
+        url: https://www.meetup.com/Spark-AI-Prague-Meetup/events/261799133/
+        dtstart: 2019-06-17 17:30:00+02:00
+        dtend: 2019-06-17 22:00:00+02:00
