--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -155,3 +155,28 @@ series:
         url: https://www.meetup.com/GDGPrague/events/drxpmsyccpblb/
         dtstart: 2021-11-08 18:30:00+01:00
         dtend: 2021-11-08 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Mon, Nov 22, 2021, 6:30 PM: • How to join?Online only because of covid https://meet.google.com/zzn-enqh-vnn• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/'
+      og_title: GDG Garage Prague One, Mon, Nov 22, 2021, 6:30 PM
+      image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
+      url: https://www.meetup.com/GDGPrague/events/drxpmsyccpbdc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Monday, November 22 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://meet.google.com/zzn-enqh-vnn • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/drxpmsyccpbdc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_drxpmsyccpbdc@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/drxpmsyccpbdc/
+        dtstart: 2021-11-22 18:30:00+01:00
+        dtend: 2021-11-22 20:30:00+01:00
