--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -6,15 +6,15 @@ series:
     image: https://secure.meetupstatic.com/photos/event/1/2/1/6/600_498544630.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 13, 2021, 7:00 PM: (CZ): První online i offline akce zároveň!Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."Online budeme vysílat na youtube (link dodáme), offline se sejdeme u '
-      og_title: Meetup Frontedisti.cz, Wed, Oct 13, 2021, 7:00 PM
-      image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
+      meta_description: 'Wed, Oct 13, 2021, 6:00 PM: (CZ): První online i offline akce zároveň!Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."Online budeme vysílat na youtube (link dodáme), offline se sejdeme u '
+      og_title: ONLINE/OFFLINE říjnový Frontedisti.cz, Wed, Oct 13, 2021, 6:00 PM
+      image: https://secure.meetupstatic.com/photos/event/a/e/c/600_499262796.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccnbrb/
       ical:
-        summary: Meetup Frontedisti.cz
+        summary: ONLINE/OFFLINE říjnový Frontedisti.cz
         description: 'Frontendisti.cz
 
-          Wednesday, October 13 at 7:00 PM
+          Wednesday, October 13 at 6:00 PM
 
 
           (CZ): První online i offline akce zároveň! Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout." Online budeme vysílat na youtube (link dodáme...
@@ -28,8 +28,8 @@ series:
         status: CONFIRMED
         uid: event_mbjhpsyccnbrb@meetup.com
         url: https://www.meetup.com/frontendisti/events/280531700/
-        dtstart: 2021-10-13 19:00:00+02:00
-        dtend: 2021-10-13 22:00:00+02:00
+        dtstart: 2021-10-13 18:00:00+02:00
+        dtend: 2021-10-13 21:00:00+02:00
   - meetupcom:
       meta_description: 'Wed, Nov 10, 2021, 7:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
       og_title: Meetup Frontedisti.cz, Wed, Nov 10, 2021, 7:00 PM
