data: cron update

--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -6,7 +6,7 @@ series:
     image: https://secure.meetupstatic.com/photos/event/1/2/1/6/600_498544630.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 13, 2021, 6:00 PM: (CZ): První online i offline akce zároveň!Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."Online budeme vysílat na youtube (link dodáme), offline se sejdeme u '
+      meta_description: 'Wed, Oct 13, 2021, 6:00 PM: (CZ): První online i offline akce zároveň!Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout."Online budeme vysílat na youtube https://youtu.be/Ng0LkAeO1I0 , offli'
       og_title: ONLINE/OFFLINE říjnový Frontedisti.cz, Wed, Oct 13, 2021, 6:00 PM
       image: https://secure.meetupstatic.com/photos/event/a/e/c/600_499262796.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsyccnbrb/
@@ -17,7 +17,7 @@ series:
           Wednesday, October 13 at 6:00 PM
 
 
-          (CZ): První online i offline akce zároveň! Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout." Online budeme vysílat na youtube (link dodáme...
+          (CZ): První online i offline akce zároveň! Tentokrát na téma: "Jaké frameworky ti nesmí letos uniknout." Online budeme vysílat na youtube...
 
 
           https://www.meetup.com/frontendisti/events/280531700/'
