--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -157,7 +157,7 @@ series:
         dtstart: 2021-10-05 18:00:00+02:00
         dtend: 2021-10-05 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Oct 4, 2021, 6:30 PM: O tom, že není testování jako testování se přesvědčíme na říjnovém UX Monday. S Michalem Vojákem a jeho kolegyní Luciou Marcinkovou z Designdev se totiž podíváme zblízka na '
+      meta_description: 'Mon, Oct 4, 2021, 6:30 PM: Link na livestream - https://youtu.be/2_wuN5b8EHoSlido na otázky řečníkům - https://app.sli.do/event/c8xemupqO tom, že není testování jako testování se přesvědčíme na říjnov'
       og_title: 'UX Monday: Uživatelské testování a čeho se vyvarovat'
       image: https://secure.meetupstatic.com/photos/event/7/3/e/d/600_499109677.jpeg
       url: https://www.meetup.com/asociace-ux/events/281045132/
@@ -168,7 +168,7 @@ series:
           Monday, October 4 at 6:30 PM
 
 
-          O tom, že není testování jako testování se přesvědčíme na říjnovém UX Monday. S Michalem Vojákem a jeho kolegyní Luciou Marcinkovou z Designdev se tot...
+          Link na livestream - https://youtu.be/2_wuN5b8EHoSlido na otázky řečníkům - https://app.sli.do/event/c8xemupq O tom, že není testování jako testování ...
 
 
           https://www.meetup.com/asociace-ux/events/281045132/'
