--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -107,7 +107,7 @@ series:
   - meetupcom:
       meta_description: 'Tue, Oct 5, 2021, 7:00 PM: Tentokrát se podíváme na adrenalinové sporty. Hledáte nějaký netechnický koníček? Přijďte načerpat inspiraci!Sledovat nás můžete jako vždy i živě na: https://zive.tv/topmonk'
       og_title: Adrenalinové sporty
-      image: https://secure.meetupstatic.com/photos/event/b/6/0/7/600_499186599.jpeg
+      image: https://secure.meetupstatic.com/photos/event/1/3/b/0/600_499265040.jpeg
       url: https://www.meetup.com/TopMonks-Caffe/events/281139148/
       ical:
         summary: Adrenalinové sporty
@@ -116,7 +116,7 @@ series:
           Tuesday, October 5 at 7:00 PM
 
 
-          Tentokrát se podíváme na adrenalinové sporty. Hledáte nějaký netechnický koníček? Přijďte načerpat inspiraci!  Sledovat nás můžete jako vždy i živě na...
+          Tentokrát se podíváme na adrenalinové sporty. Hledáte nějaký netechnický koníček? Přijďte načerpat inspiraci! Sledovat nás můžete jako vždy i živě na:...
 
 
           https://www.meetup.com/TopMonks-Caffe/events/281139148/'
