--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -106,7 +106,7 @@ series:
         dtstart: 2020-02-24 18:00:00+01:00
         dtend: 2020-02-24 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Nov 3, 2021, 6:00 PM: Hello doers,The forth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the session will be one main'
+      meta_description: 'Wed, Nov 3, 2021, 6:00 PM: Hello doers,The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the session will be one mai'
       og_title: Prague DevOps meetup online (November)
       image: https://secure.meetupstatic.com/photos/event/6/e/7/4/600_474748276.jpeg
       url: https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/
@@ -117,7 +117,7 @@ series:
           Wednesday, November 3 at 6:00 PM
 
 
-          Hello doers, The forth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the ...
+          Hello doers, The fourth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the...
 
 
           https://www.meetup.com/Prague-DevOps-Meetup/events/281198432/'
