--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -130,3 +130,28 @@ series:
         url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/280792094/
         dtstart: 2021-09-29 18:00:00+02:00
         dtend: 2021-09-29 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 13, 2021, 6:00 PM: Chceš vyzkoušet programování a setkat se online s mentory Green Fox Academy?Připoj se k našemu večernímu workshopu, který proběhne online ve středu 13. října od 18 hodin. P'
+      og_title: 'Online workshop: Základy programování'
+      image: https://secure.meetupstatic.com/photos/event/a/3/2/f/600_499301775.jpeg
+      url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/281244326/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Wednesday, October 13 at 6:00 PM
+
+
+          Chceš vyzkoušet programování a setkat se online s mentory Green Fox Academy? Připoj se k našemu večernímu workshopu, který proběhne online ve středu 1...
+
+
+          https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/281244326/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281244326@meetup.com
+        url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/281244326/
+        dtstart: 2021-10-13 18:00:00+02:00
+        dtend: 2021-10-13 20:00:00+02:00
